--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script defer src="scripts.js"></script>
+    <script type="module" src="./scripts.js"></script>
 
     <link rel="stylesheet" href="styles.css" />
 
@@ -128,10 +128,8 @@
 
         Амфитеатър" от 18:00ч.</p>
 
-      <a class="mapsLink" href=https://www.google.com/maps/place/Club+Residence+at+Blacksearama+Golf,+Tabiata+Area,+Road,+E87,+9600+Balchik/@43.4096649,28.2214963,17z/data=!4m6!1m3!3m2!1s0x40a4e38071d91ac1:0xba2bd3aaaee318f4!2sBlackSeaRama+Golf+%26+Villas,+Tabiata+District,+9600+Balchik!3m1!1s0x40a43d062561e71d:0x1542c8bedf323078>
-
-      Покажи на картата
-
+      <a class="mapsLink" href="https://www.google.com/maps/place/Club+Residence+at+Blacksearama+Golf,+Tabiata+Area,+Road,+E87,+9600+Balchik/@43.4096649,28.2214963,17z/data=!4m6!1m3!3m2!1s0x40a4e38071d91ac1:0xba2bd3aaaee318f4!2sBlackSeaRama+Golf+%26+Villas,+Tabiata+District,+9600+Balchik!3m1!1s0x40a43d062561e71d:0x1542c8bedf323078">
+        Покажи на картата
       </a>
 
       <section class="btnSection">
