--- a/index.html
+++ b/index.html
@@ -1,112 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="./scripts.js"></script>
-    <link rel="stylesheet" href="styles.css" />
-    <title>Сватбата на Петя и Деян</title>
-</head> 
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script  src="./scripts.js"></script>
+  <link rel="stylesheet" href="styles.css" />
+  <title>Сватбата на Петя и Деян</title>
+</head>
 
-  <body data-role="touch" data-on-swipe="mySwipeFunction">    
-    <div class="page-1">
-      <section class="header-info">
-        <img src="./images/mirrored-removebg-preview (2).png" alt="">
-        <h2>Ние,<br />Петя Лазарова & Деян Велев,</h2>
-        <p class="inviteText">
-          Заедно с нашите родители,<br>
-          с удоволствие Ви каним<br>
-          да бъдете гости на нашия<br>
-          специален сватбен ден,<br>
-          на 24ти юли 2022г!
-        </p>
+<body>
+ <main class="main">
+  <div class="page-1">
+    <img src="./images/mirrored-removebg-preview (2).png" alt="">
+    <h2>Ние,<br />Петя Лазарова & Деян Велев,</h2>
+    <p class="inviteText">
+    Заедно с нашите родители,<br>
+    с удоволствие Ви каним<br>
+    да бъдете гости на нашия<br>
+    специален сватбен ден,<br>
+    на 24ти юли 2022г!
+    </p>
 
-        <p class="inviteText anibobi">
-          Без много да умуват,<br>
-          семейство Гергови<br>
-          ще ни кумуват.
-        </p>
+    <p class="inviteText anibobi">
+    Без много да умуват,<br>
+    семейство Гергови<br>
+    ще ни кумуват.
+    </p>
+</div>
+ </main>
+</body>
 
-        <button class="navBtn right" id="btn-page-1" >
-          <img src="./images/arrow-right1.png" alt="">
-        </button>
-      </section>
-    </div>
-
- 
-
-    <div class="page-2 hidden"> 
-      <img src="./images/mirrored-removebg-preview (2).png" alt=""> 
-      <p class="detailsText">
-        Сватбени камбани<br>
-        ще звънят<br>
-        и празнични свещи<br>
-        ще пламтят<br>
-        в 16:30ч в храм <br>
-        "Св. Георги Победоносец",<br>
-        гр. Балчик.
-      </p>
-
-      <a class="mapsLink"  href=https://www.google.com/maps/place/%D1%86%D1%8A%D1%80%D0%BA%D0%B2%D0%B0+%E2%80%9E%D0%A1%D0%B2.+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%BC%D1%8A%D1%87%D0%B5%D0%BD%D0%B8%D0%BA+%D0%93%D0%B5%D0%BE%D1%80%D0%B3%D0%B8+%D0%9F%D0%BE%D0%B1%D0%B5%D0%B4%D0%BE%D0%BD%D0%BE%D1%81%D0%B5%D1%86%E2%80%9C/@43.416763,28.1597582,14.75z/data=!4m9!1m2!2m1!1scyrkvi!3m5!1s0x40a4e4812de2833b:0x219bc02003ca30bb!8m2!3d43.4082293!4d28.1650143!15sCgzRhtGK0YDQutCy0LhaDiIM0YbRitGA0LrQstC4kgEPb3J0aG9kb3hfY2h1cmNomgEjQ2haRFNVaE5NRzluUzBWSlEwRm5TVVJOTFZwMlIwTlJFQUU>Покажи на картата</a>
-
-      <section class="btnSection">
-        <button class="navBtn left" id="btn-page-2-left"><img src="./images/arrow-left.png" alt=""></button>
-        <button class="navBtn right" id="btn-page-2-right"><img src="./images/arrow-right1.png" alt=""></button>
-
-      </section>
-    </div>
-
- 
-
-    <div class="page-3 hidden">
-      <img src="./images/mirrored-removebg-preview (2).png" alt="">   
-      <p class="detailsText">
-        Там,<br>
-        където красивото небе среща<br>
-        приказно синьото море,<br>
-        ръка за ръка, ще си кажем<br>
-        най-романтичното ни "Да".<br>
-        На коктейл се насладете<br>
-        и наздравици вдигнете!<br>
-        Заповядайте в "БлекСиРама<br>
-        Амфитеатър" от 18:00ч.</p>
-      <a class="mapsLink" href="https://www.google.com/maps/place/Club+Residence+at+Blacksearama+Golf,+Tabiata+Area,+Road,+E87,+9600+Balchik/@43.4096649,28.2214963,17z/data=!4m6!1m3!3m2!1s0x40a4e38071d91ac1:0xba2bd3aaaee318f4!2sBlackSeaRama+Golf+%26+Villas,+Tabiata+District,+9600+Balchik!3m1!1s0x40a43d062561e71d:0x1542c8bedf323078">
-        Покажи на картата
-      </a>
-      <section class="btnSection">
-        <button class="navBtn left" id="btn-page-3-left"><img src="./images/arrow-left.png" alt=""></button>
-
-        <button class="navBtn right" id="btn-page-3-right"><img src="./images/arrow-right1.png" alt=""></button>     
-
-      </section>
-    </div>
-
- 
-
-    <div class="page-4 hidden"> 
-      <img src="./images/mirrored-removebg-preview (2).png" alt="">  
-      <p class="detailsText">
-      На празнична вечеря <br>
-      от 19:00ч. заповядайте<br>
-      и удобните си обувки <br>
-      не забравяйте.<br>
-      С песни и хора, да се веселим <br>до сутринта.</p>
-      <a class="mapsLink"      
-
-      href=https://www.google.com/maps/place/Club+Residence+at+Blacksearama+Golf,+Tabiata+Area,+Road,+E87,+9600+Balchik/@43.4096649,28.2214963,17z/data=!4m6!1m3!3m2!1s0x40a4e38071d91ac1:0xba2bd3aaaee318f4!2sBlackSeaRama+Golf+%26+Villas,+Tabiata+District,+9600+Balchik!3m1!1s0x40a43d062561e71d:0x1542c8bedf323078>
-
-      Покажи на картата
-      </a>        
-
-      <p class="molba">
-       Учтиво молим да потвърдите присъствието си до 15ти април 2022г.
-      </p>   
-
-      <section class="btnSection">
-        <button class="navBtn left" id="btn-page-4-left"><img src="./images/arrow-left.png" alt=""></button>     
-
-      </section>
-    </div>
-  </body>
 </html>
