--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script  src="./scripts.js"></script>
   <link rel="stylesheet" href="styles.css" />
   <title>Сватбата на Петя и Деян</title>
 </head>
 
-<body>
+<body style="margin: 0">
  <main class="main">
   <div class="page-1">
     <img src="./images/mirrored-removebg-preview (2).png" alt="">
