--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <p class="inviteText">на 24ти юли 2022г!</p>          
     </section>
     <section class="gergovi">
-      <p class="anibobi">Без много да умуват,</p>
-      <p class="anibobi">семейство Гергови</p>
-      <p class="anibobi">ще ни кумуват.</p>
+      <p class="anibobi">Кумуват:</p>
+      <p class="anibobi">Антоанета и Борислав</p>
+      <p class="anibobi">Гергови.</p>
     </section>
 </div>
  </main>
